syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "pkg/proto";

enum SecretType {
  SECRET_TYPE_UNSPECIFIED = 0;
  SECRET_TYPE_CREDENTIALS = 1;
  SECRET_TYPE_TEXT = 2;
  SECRET_TYPE_BLOB = 3;
  SECRET_TYPE_CARD = 4;
}

message Secret {
  uint64 id = 1;
  string title = 2;
  string metadata = 3;
  bytes payload = 4;
  SecretType secret_type = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message GetUserSecretRequest {
  uint64 id = 1;
}

message GetUserSecretResponse {
  Secret secret = 1;
}

message GetUserSecretsResponse {
  repeated Secret secrets = 1;
}

message SaveUserSecretRequest {
  Secret secret = 1;
}

message DeleteUserSecretRequest {
  uint64 id = 1;
}

service Secrets {
  rpc GetUserSecret(GetUserSecretRequest) returns (GetUserSecretResponse);
  rpc GetUserSecrets(google.protobuf.Empty) returns (GetUserSecretsResponse);
  rpc SaveUserSecret(SaveUserSecretRequest) returns (google.protobuf.Empty);
  rpc DeleteUserSecret(DeleteUserSecretRequest) returns (google.protobuf.Empty);
}